Wrapping tags and fixing layout for the listing info

--- a/src/Components/Tag/Tag.css
+++ b/src/Components/Tag/Tag.css
@@ -6,4 +6,5 @@
     font-size: 14px;
     font-weight: 500;
     border-radius: 10px;
+    white-space: nowrap;
 }
